# nba-fantasy-draft-cli

./: Cargo.toml  README.md  env.sample
data/: player_salaries.json  teams.json
src/: draft.rs  main.rs  models.rs  utils.rs
