[package]
name = "nba-fantasy-draft-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
scraper = "0.17.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
