[package]
name = "nba-fantasy-draft-cli"
version = "0.1.0"
edition = "2021"
default-run = "nba-fantasy-draft-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.9.0"
prettytable-rs = "^0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
